<resources>
    <string name="app_name" translatable="false">Globetrotting</string>
    <string name="full_name" translatable="false">%1$s %2$s</string>

    <string name="imagotype_description">Imagotipo de Globetrotting</string>
    <!-- BOTTOM NAV MENU -->
    <string name="menu_home">Inicio</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_destinations">Destinos</string>
    <string name="menu_booking">Reservas</string>
    <!-- PROFILE MENU -->
    <string name="profile_menu_logout">Salir</string>
    <string name="profile_menu_my_profile">Mi perfil</string>
    <!-- AUTH -->
    <string name="form_email_hint">Email</string>
    <string name="form_password_hint">Contraseña</string>
    <string name="form_repeat_password_hint">Repetir contraseña</string>
    <string name="form_username_hint">Usuario</string>
    <string name="login_forgot_password">Olvidé la contraseña</string>
    <string name="login_btn">Entrar</string>
    <string name="login_new_account">¿No tienes cuenta?</string>
    <string name="login_create_account">Crear una</string>
    <string name="create_account_btn">Crear cuenta</string>
    <string name="login_error_response">"No es posible la autenticación"</string>
    <string name="login_error_response_error_title">"Error"</string>
    <string name="login_error_response_accept_btn">"Aceptar"</string>
    <string name="signup_error_response_collision">El email ya está registrado</string>
    <string name="signup_error_response">No se ha podido hacer el registro</string>
    <string name="signup_error_response_data">Error al generar los datos del usuario</string>
    <string name="welcome">Te damos la bienvenida %1$s</string>
    <string name="forgot_password_explanation_question">¿Olvidaste tu contraseña?</string>
    <string name="forgot_password_explanation">Indica tu email y recibirás un enlace de reinicio.</string>
    <string name="forgot_password_sent">"Email enviado a %1$s"</string>
    <string name="forgot_password_error_response">"Ha habido un error al enviar el email"</string>
    <string name="forgot_password_btn_remind">Recordar contraseña</string>
    <!-- MY PROFILE -->
    <string name="profile_avatar">Avatar del usuario</string>
    <string name="profile_username_label">Usuario:</string>
    <string name="profile_email_label">Email:</string>
    <string name="profile_edit_btn">Modificar</string>
    <!-- EDIT PROFILE -->
    <string name="form_name_hint">Nombre</string>
    <string name="form_surname_hint">Apellidos</string>
    <string name="form_nickname_hint">Nickname</string>
    <string name="edit_profile_change_avatar_btn">Cambiar</string>
    <string name="edit_profile_remove_avatar_btn">Retirar</string>
    <string name="edit_profile_cancel_btn">Cancelar</string>
    <string name="edit_profile_accept_btn">Aceptar</string>
    <!-- DESTINATIONS LIST -->
    <string name="dest_search_hint">Buscar</string>
    <string name="dest_btn_book_now">Reservar ahora</string>
    <string name="dest_btn_see_details">Ver detalles</string>
    <!-- DESTINATION ITEM (FOR DESTINATIONS LIST -->
    <string name="destination_item_price">%s</string>
    <string name="destination_item_per_night">/noche</string>
    <!-- BOOKING FORM -->
    <string name="booking_form_header_title">Realizar una reserva</string>
    <string name="booking_form_select_destination">Seleccionar el destino</string>
    <string name="booking_form_select_traveler">Seleccionar el viajero</string>
    <string name="booking_form_departure">Fecha de salida</string>
    <string name="booking_form_arrival">Fecha de llegada</string>
    <string name="booking_form_display_calendar">Mostrar el calendario para elegir las fechas</string>
    <string name="booking_form_select_dates">Elegir las fechas</string>
    <string name="booking_form_num_travelers">Número de viajeros</string>
    <string name="booking_form_accept_btn">Realizar reserva</string>
    <!-- BOOKING ITEM (FOR BOOKING LIST) -->
    <string name="booking_item_departure">Salida: %s</string>
    <string name="booking_item_arrival">Llegada: %s</string>
    <string name="booking_share">Compartir</string>
    <!-- BOOKINGS LIST -->
    <string name="share_text">¡Nos vamos de viaje a %s del %s al %s!</string>
    <!-- TRAVELER DETAIL -->
    <string name="traveler_detail">Detalle del viajero</string>
    <!-- DESTINATION DETAIL -->
    <string name="destination_detail">Detalle del destino</string>
    <!-- DESCRIPTION MOCK -->
    <string name="RickSanchez">Un científico excéntrico y alcohólico con una inteligencia excepcional pero un comportamiento bastante cuestionable. Es el abuelo de Morty y suele llevar a su nieto en aventuras intergalácticas peligrosas.</string>
    <string name="MortySmith">El nieto de Rick, es un adolescente normal y corriente que a menudo acompaña a su abuelo en sus aventuras. A pesar de ser ingenuo, Morty tiene un corazón noble y trata de hacer lo correcto en situaciones difíciles.</string>
    <string name="SummerSmith">La hermana mayor de Morty, es una adolescente popular y a menudo se preocupa por asuntos típicos de su edad. A pesar de ello, a lo largo de la serie demuestra ser inteligente y valiente en diversas situaciones.</string>
    <string name="BethSmith">La hija de Rick y madre de Morty y Summer. Es una cirujana inteligente pero insegura en su vida personal. Tiene una relación compleja con su padre y trata de encontrar un equilibrio entre su vida familiar y profesional.</string>
    <string name="JerrySmith">Es el esposo de Beth y suegro de Rick. Tiene un trabajo mundano y a menudo se muestra como una persona insegura y torpe. A pesar de sus defectos, trata de ser un buen padre y esposo.</string>
    <string name="AbadangoClusterPrincess">Un personaje misterioso y poderoso de la serie que reside en el planeta Abadango. Posee habilidades excepcionales y un rol importante en algunas historias.</string>
    <string name="AbradolfLincler">Un clon creado por Rick que combina características de Abraham Lincoln y Adolf Hitler. Lucha con su identidad y busca ser moralmente correcto, pero sus contradicciones lo hacen un personaje complejo.</string>
    <string name="AdjudicatorRick">Es un personaje de alto rango en el Consejo Galáctico. Tiene autoridad para dictaminar sobre los Ricks y Mortys en todo el multiverso.</string>
    <string name="AgencyDirector">Un personaje que lidera una agencia secreta, es un hombre con gran autoridad y control sobre su organización.</string>
    <string name="AlanRails">Un superhéroe que tiene la habilidad de controlar los trenes y forma parte de un equipo de superhéroes conocido como los Vindicadores.</string>
    <string name="AlbertEinstein">En el contexto de la serie, es un científico famoso y reconocido cuya existencia está presente en el multiverso.</string>
    <string name="Alexander">Un personaje que aparece en algunos episodios, es conocido por su astucia y manejo de situaciones complicadas.</string>
    <string name="AlienGoogah">Un personaje alienígena que aparece en la serie, aunque no tiene un papel destacado o información específica en la trama principal.</string>
    <string name="AlienMorty">Es una versión alienígena de Morty Smith, con algunas características y atributos distintos de la versión original.</string>
    <string name="AlienRick">Similar a Alien Morty, esta versión es una representación alienígena de Rick Sanchez, con variaciones en sus rasgos y personalidad.</string>
    <string name="AmishCyborg">Un personaje único que mezcla elementos de la tecnología cyborg con el estilo de vida y las prácticas de la comunidad Amish, lo que lo hace intrigante en la serie.</string>
    <string name="Annie">Un personaje recurrente en algunos episodios, es conocida por su relación con uno de los personajes principales y por su participación en algunas aventuras.</string>
    <string name="AntennaMorty">Otra variante de Morty, caracterizada por tener antenas, posiblemente de una dimensión alternativa o universo paralelo.</string>
    <string name="AntennaRick">Similar a Antenna Morty, es una versión de Rick con antenas, lo que indica su origen en algún universo distinto.</string>
    <string name="AntsinmyEyesJohnson">Un personaje peculiar conocido por su eslogan publicitario. A pesar de su aparente carencia de ojos, vende productos con entusiasmo en comerciales dentro de la serie.</string>
    <string name="make_your_booking">Haz tu reserva ahora</string>
    <string name="no_bookings_yet">¡Aún no hay reservas!</string>
    <string name="menu_action_edit">Editar</string>
    <string name="menu_action_delete">Eliminar</string>
    <string name="bookings_booking_deleted_toast">Reserva eliminada</string>
    <string name="booking_form_edit_btn">Editar reserva</string>
    <string name="home_menu_my_account">Mi cuenta</string>
    <string name="home_menu_my_bookings">Reservas</string>
    <string name="home_menu_my_favorites">Favoritos</string>
    <string name="home_hero_motto_text">Descubre tu propia \naventura</string>
    <string name="home_see_all_popular">Ver todos</string>
    <string name="home_popular_destinations">Destinos populares</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>