<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".ui.main.profile.fragments.EditProfileDialogFragment"
    tools:padding="50dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_avatar_edit_profile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/profile_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/Circular"
        app:srcCompat="@drawable/default_avatar" />

    <Button
        android:id="@+id/btn_change_avatar_profile"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/edit_profile_change_avatar_btn"
        app:icon="@drawable/ic_edit"
        app:layout_constraintBottom_toTopOf="@+id/btn_remove_avatar_profile"
        app:layout_constraintStart_toEndOf="@+id/iv_avatar_edit_profile"
        app:layout_constraintTop_toTopOf="@id/iv_avatar_edit_profile" />

    <Button
        android:id="@+id/btn_remove_avatar_profile"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile_remove_avatar_btn"
        app:icon="@drawable/ic_trash"
        app:layout_constraintBottom_toBottomOf="@id/iv_avatar_edit_profile"
        app:layout_constraintStart_toStartOf="@+id/btn_change_avatar_profile"
        app:layout_constraintTop_toBottomOf="@+id/btn_change_avatar_profile" />

    <TextView
        android:id="@+id/tv_username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/profile_username_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/tv_username"
        app:layout_constraintStart_toStartOf="@+id/iv_avatar_edit_profile"
        app:layout_constraintTop_toBottomOf="@+id/iv_avatar_edit_profile" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_username_label"
        app:layout_constraintStart_toEndOf="@id/tv_username_label"
        tools:text="username" />

    <TextView
        android:id="@+id/tv_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/profile_email_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tv_username_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_username_label" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_email_label"
        app:layout_constraintStart_toEndOf="@id/tv_email_label"
        tools:text="email@gmail.com" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/form_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/form_name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/til_form_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_form_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/form_surname_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/form_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/til_form_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/form_repeat_passwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/form_nickname_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_form_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/til_form_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_cancel_edit_profile"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/edit_profile_cancel_btn"
        app:layout_constraintEnd_toStartOf="@id/btn_accept_edit_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_repeat_passwd" />

    <Button
        android:id="@+id/btn_accept_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/edit_profile_accept_btn"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_cancel_edit_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_cancel_edit_profile" />

</androidx.constraintlayout.widget.ConstraintLayout>